route grouping, manage bot, docs init

--- a/biome.json
+++ b/biome.json
@@ -4,6 +4,7 @@
 		"ignore": [
 			"dist",
 			".next",
+			".source",
 			"generated",
 			"./packages/**/package.json",
 			"./packages/**/tsconfig.json",
