--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 		"db:migrate": "prisma migrate deploy",
 		"db:push": "prisma db push",
 		"db:studio": "prisma studio",
-    "db:format": "prisma format",
+		"db:format": "prisma format",
 		"dev": "next dev --turbo",
-		"postinstall": "prisma generate",
+		"postinstall": "prisma generate && fumadocs-mdx",
 		"pretty": "biome check . --write --diagnostic-level=warn && pnpm run db:format",
 		"pretty:unsafe": "biome check . --write --diagnostic-level=warn --unsafe && pnpm run db:format",
 		"start": "next start"
@@ -53,6 +53,7 @@
 		"@trpc/client": "^11.0.0-rc.446",
 		"@trpc/react-query": "^11.0.0-rc.446",
 		"@trpc/server": "^11.0.0-rc.446",
+		"@types/mdx": "^2.0.13",
 		"@xyflow/react": "^12.3.0",
 		"arctic": "^1.9.2",
 		"class-variance-authority": "^0.7.0",
@@ -61,6 +62,9 @@
 		"date-fns": "^3.6.0",
 		"discord-api-types": "^0.37.100",
 		"embla-carousel-react": "^8.3.0",
+		"fumadocs-core": "^13.4.10",
+		"fumadocs-mdx": "^10.0.2",
+		"fumadocs-ui": "^13.4.10",
 		"geist": "^1.3.0",
 		"input-otp": "^1.2.4",
 		"lucia": "^3.2.0",
