--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"build": "next build",
-		"db:generate": "prisma migrate dev",
-		"db:migrate": "prisma migrate deploy",
+		"db:generate": "prisma generate",
+		"db:migratedev": "prisma migrate dev",
 		"db:push": "prisma db push",
 		"db:studio": "prisma studio",
 		"db:format": "prisma format",
@@ -50,6 +50,7 @@
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"@tanstack/react-query": "^5.50.0",
+		"@tanstack/react-table": "^8.20.5",
 		"@trpc/client": "^11.0.0-rc.446",
 		"@trpc/react-query": "^11.0.0-rc.446",
 		"@trpc/server": "^11.0.0-rc.446",
